# ai-ir

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml
docs/: README.md
docs/en/: architecture.md  data-format.md  knowledge-format.md  maintenance.md  security.md
docs/ja/: architecture.md  data-format.md  knowledge-format.md  maintenance.md  security.md
src/aiir/: __init__.py  cli.py  config.py  keychain.py  models.py  utils.py
src/aiir/analyze/: activity.py  roles.py  summarizer.py
src/aiir/knowledge/: extractor.py  formatter.py
src/aiir/llm/: client.py
src/aiir/parser/: defang.py  loader.py  sanitizer.py
src/aiir/report/: generator.py
src/aiir/server/: app.py  loader.py  routes.py
src/aiir/server/templates/: base.html  index.html  knowledge.html  report.html  tactic.html
src/aiir/translate/: translator.py
tests/: conftest.py
tests/test_analyze/: test_activity.py  test_roles.py
tests/test_keychain/: test_keychain.py
tests/test_knowledge/: test_extractor_prompt.py  test_formatter.py
tests/test_llm/: test_client.py
tests/test_parser/: test_defang.py  test_loader.py  test_sanitizer.py
tests/test_report/: test_generator.py
tests/test_server/: test_loader.py  test_routes.py
tests/test_translate/: test_translator.py
